# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
Creational/: CMakeLists.txt
Creational/src/: CMakeLists.txt
src/: AbstractFactory.cpp  AbstractFactory.h  AbstractFactory.uxf  Builder.cpp  Builder.h  Builder.uxf  CMakeLists.txt  Factory.cpp  Factory.h  Factory.uxf  FactoryMethod.cpp  FactoryMethod.h  FactoryMethod.uxf  Prototype.cpp  Prototype.h  Prototype.uxf  Singleton.cpp  Singleton.h  Singleton.uxf  main.cpp
